--- a/test/unittest/CMakeLists.txt
+++ b/test/unittest/CMakeLists.txt
@@ -7,8 +7,8 @@ include_directories (./
     ${THIRDPARTY_DIR}/gtest/include)
 
 # add unittest executable
-set (foobar_unittest_SRC           foobar_unittest.cpp)
-add_executable (foobar_unittest    ${foobar_unittest_SRC})
+set (foobar_unittest_SRC            foobar_unittest.cpp)
+add_executable (foobar_unittest     ${foobar_unittest_SRC})
 
 # three libraries should be linked
 #   - gtest
@@ -18,3 +18,10 @@ target_link_libraries (foobar_unittest
     gtest
     pthread
     foobar) 
+
+# an unrelated failed unittest example
+set (failed_unittest_SRC            failed_unittest.cpp)
+add_executable (failed_uniitest     ${failed_unittest_SRC})
+target_link_libraries (failed_uniitest 
+    gtest 
+    pthread)
